# 5D-Holomorphic-Geometry

./: README.md  WHITE_PAPER.md  pyproject.toml  temporal_field_viewer.html
holomorphic5d/: __init__.py  cli.py  formulas.py  fundamental.py  imaging.py  manifold.py  mass_gap.py  physics.py  simulation.py  spectral.py  unification.py
tests/: test_formulas.py  test_fundamental.py  test_imaging.py  test_manifold.py  test_mass_gap.py  test_physics.py  test_simulation.py  test_spectral.py  test_unification.py  test_webgl_viewer.py
